- Add `/Core` switch to `Invoke-AppDeployToolkit.exe` to allow using PowerShell Core if available.

--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke-AppDeployToolkit.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke-AppDeployToolkit.csproj
@@ -60,6 +60,9 @@
   <PropertyGroup>
     <ApplicationIcon>appIcon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
