- Initial commit of `CreateProcessAsUser()` code. All working well thus far.

--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -86,6 +86,10 @@
 	  <Optimize>true</Optimize>
 	</PropertyGroup>
 
+	<PropertyGroup>
+	  <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <Compile Remove="LINQ\**" />
 	  <EmbeddedResource Remove="LINQ\**" />
