- Rename the PSAppDeployToolkit module zip file to include "ModuleOnly".
Too many people download it and have no idea what to do with it. Hopefully this helps...

--- a/.github/workflows/wf_Windows.yml
+++ b/.github/workflows/wf_Windows.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Upload module
       uses: actions/upload-artifact@v4
       with:
-        name: PSAppDeployToolkit
+        name: PSAppDeployToolkit_ModuleOnly
         path: .\src\Artifacts\Module
         if-no-files-found: error
         overwrite: true
