--- a/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -60,20 +60,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.183">
-	  <PrivateAssets>all</PrivateAssets>
-	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	</PackageReference>
-	<PackageReference Include="System.Memory" Version="4.6.3" />
-	<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="System.Windows.Forms" Condition="'$(TargetFramework)' == 'net462'" />
-  </ItemGroup>
-
-  <ItemGroup>
-	<PackageReference Include="System.Management" Version="9.0.4" Condition="'$(TargetFramework)' == 'net462'" />
   </ItemGroup>
 
   <ItemGroup>
@@ -94,6 +81,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\lib\wpfui\src\Wpf.Ui.Tray\Wpf.Ui.Tray.csproj" />
     <ProjectReference Include="..\..\..\lib\wpfui\src\Wpf.Ui\Wpf.Ui.csproj" />
+    <ProjectReference Include="..\..\PSADT\PSADT\PSADT.csproj" />
   </ItemGroup>
 
   <ItemGroup>
