--- a/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -10,7 +10,7 @@
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	  <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
 	  <Nullable>enable</Nullable>
-	  <ApplicationManifest>app.manifest</ApplicationManifest>
+	  <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
 	  <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
 	  <UserSecretsId>1f9c9b02-c540-4d44-95e4-075d460f0854</UserSecretsId>
 	  <AssemblyName>PSADT.UserInterface</AssemblyName>
