- Remove all app manifests from PSASDT.UserInterface projects while we debug classic HiDPI issues.

--- a/src/PSADT.UserInterface/PSADT.Exe/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT.UserInterface/PSADT.Exe/PSADT.UserInterface.TestHarness.csproj
@@ -5,7 +5,6 @@
 	  <TargetFramework>net462</TargetFramework>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <UseWPF>true</UseWPF>
-	  <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
       <Deterministic>true</Deterministic>
       <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
       <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
@@ -32,6 +31,7 @@
       <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
       <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
       <RepositoryType>git</RepositoryType>
+      <NoWin32Manifest>true</NoWin32Manifest>
 
   </PropertyGroup>
 
