--- a/src/PSADT.UserInterface/PSADT.Exe/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT.UserInterface/PSADT.Exe/PSADT.UserInterface.TestHarness.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <OutputType>Exe</OutputType>
-	  <TargetFramework>net462</TargetFramework>
+	  <OutputType>WinExe</OutputType>
+      <TargetFrameworks>net462;net8.0-windows10.0.17763</TargetFrameworks>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <UseWPF>true</UseWPF>
       <Deterministic>true</Deterministic>
@@ -28,23 +28,45 @@
       <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
       <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
       <PublishTrimmed>false</PublishTrimmed>
-      <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+      <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
       <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
       <RepositoryType>git</RepositoryType>
-      <NoWin32Manifest>true</NoWin32Manifest>
+      <UseWindowsForms>True</UseWindowsForms>
 
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	<Optimize>False</Optimize>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net462|AnyCPU'">
+	  <DebugSymbols>true</DebugSymbols>
+	  <DebugType>full</DebugType>
+	  <WarningLevel>9999</WarningLevel>
+	  <Optimize>false</Optimize>
+	  <PreferNativeArm64>True</PreferNativeArm64>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	<Optimize>False</Optimize>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net462|AnyCPU'">
+	  <DebugSymbols>false</DebugSymbols>
+	  <DebugType>none</DebugType>
+	  <WarningLevel>9999</WarningLevel>
+	  <Optimize>true</Optimize>
+	  <PreferNativeArm64>True</PreferNativeArm64>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows10.0.17763|AnyCPU'">
+    <DebugType>none</DebugType>
+    <WarningLevel>9999</WarningLevel>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.17763|AnyCPU'">
+    <WarningLevel>9999</WarningLevel>
+    <DebugType>full</DebugType>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System.Management.Automation">
+    <Reference Include="System.Management.Automation" Condition="'$(TargetFramework)' == 'net462'">
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Management.Automation\v4.0_3.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -52,6 +74,10 @@
 
   <ItemGroup>
 	<ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.17763'">
+    <PackageReference Include="System.Management.Automation" Version="7.4.*" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
