--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -4,7 +4,7 @@
 		<OutputType>Library</OutputType>
 		<RootNamespace>PSADT</RootNamespace>
 		<AssemblyName>PSADT</AssemblyName>
-		<NoWarn>$(NoWarn);CA1416;CS4014</NoWarn>
+		<NoWarn>$(NoWarn)</NoWarn>
 		<UseWindowsForms>true</UseWindowsForms>
 
 		<AssemblyVersion>4.1.0.0</AssemblyVersion>
@@ -34,6 +34,7 @@
 		<Platforms>AnyCPU</Platforms>
 
 		<UseWPF>true</UseWPF>
+		<NoWin32Manifest>true</NoWin32Manifest>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -61,29 +62,33 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net462|AnyCPU'">
 	  <DebugSymbols>true</DebugSymbols>
 	  <DebugType>full</DebugType>
-	  <WarningLevel>3</WarningLevel>
+	  <WarningLevel>9999</WarningLevel>
 	  <Optimize>false</Optimize>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.17763|AnyCPU'">
 	  <DebugSymbols>true</DebugSymbols>
 	  <DebugType>full</DebugType>
-	  <WarningLevel>3</WarningLevel>
+	  <WarningLevel>9999</WarningLevel>
 	  <Optimize>false</Optimize>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net462|AnyCPU'">
 	  <DebugSymbols>false</DebugSymbols>
 	  <DebugType>none</DebugType>
-	  <WarningLevel>3</WarningLevel>
+	  <WarningLevel>9999</WarningLevel>
 	  <Optimize>true</Optimize>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows10.0.17763|AnyCPU'">
 	  <DebugSymbols>false</DebugSymbols>
 	  <DebugType>none</DebugType>
-	  <WarningLevel>3</WarningLevel>
+	  <WarningLevel>9999</WarningLevel>
 	  <Optimize>true</Optimize>
+	  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<PropertyGroup>
