- Enable overflow/underflow tests within all C# projects.
We were already rightfully doing this in the PSADT solution but not any of our others.

--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
@@ -39,9 +39,11 @@
     <OutputPath>bin\Debug\net462\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>5</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <PreferNativeArm64>true</PreferNativeArm64>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
