--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -14,7 +14,7 @@
 		<Authors>PSAppDeployToolkit Team</Authors>
 		<Company>PSAppDeployToolkit Team</Company>
 		<Description>PSAppDeployToolkit Support Library</Description>
-		<Title>PSAppDeployToolkit Support Libray</Title>
+		<Title>PSAppDeployToolkit Support Library</Title>
 		<Copyright>Copyright © 2025 PSAppDeployToolkit Team. All rights reserved.</Copyright>
 		<PackageProjectUrl>https://psappdeploytoolkit.com/</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/PSAppDeployToolkit/PSAppDeployToolkit</RepositoryUrl>
