--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <RootNamespace>PSADT</RootNamespace>
     <AssemblyName>PSADT</AssemblyName>
     <NoWarn>$(NoWarn)</NoWarn>
-    <UseWindowsForms>true</UseWindowsForms>
     <AssemblyVersion>4.1.0.0</AssemblyVersion>
     <FileVersion>4.1.0</FileVersion>
     <InformationalVersion>4.1.0</InformationalVersion>
@@ -28,7 +27,6 @@
     <SignAssembly>False</SignAssembly>
     <PublishTrimmed>false</PublishTrimmed>
     <Platforms>AnyCPU</Platforms>
-    <UseWPF>true</UseWPF>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
