- Disable generation of supported runtime .config files for all exe-based .csproj solutions.

--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
@@ -25,6 +25,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>false</BootstrapperEnabled>
     <RuntimeIdentifiers>win</RuntimeIdentifiers>
+    <GenerateSupportedRuntime>false</GenerateSupportedRuntime>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>9999</WarningLevel>
