--- a/src/PSADT.UserInterface/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT.UserInterface/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
@@ -8,6 +8,7 @@
     <Deterministic>true</Deterministic>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <GenerateSupportedRuntime>false</GenerateSupportedRuntime>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <StartupObject>PSADT.UserInterface.TestHarness.Program</StartupObject>
