--- a/src/PSADT.UserInterface/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT.UserInterface/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
@@ -71,14 +71,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System.Management.Automation" Condition="'$(TargetFramework)' == 'net462'">
+    <ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <Reference Include="System.Management.Automation">
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Management.Automation\v4.0_3.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
       <Private>False</Private>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-  <ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
